--- a/src/html/authorize.html.template
+++ b/src/html/authorize.html.template
@@ -17,6 +17,14 @@
     />
     <%= renderTemplate('_header') %>
     <style>
+      /* ais */
+      body {
+        color: white;
+        background: #323232;
+        --primary-text-color: #ffffff;
+        --card-background-color: #323232;
+        --paper-listbox-background-color: #323232;
+      }
       .content {
         padding: 20px 16px;
         max-width: 360px;
