--- a/demo/src/html/index.html.template
+++ b/demo/src/html/index.html.template
@@ -73,7 +73,7 @@
       name="twitter:image"
       content="https://www.home-assistant.io/images/default-social.png"
     />
-    <title>Home Assistant Demo</title>
+    <title>Asystent domowy Demo</title>
     <style>
       body {
         font-family: Roboto, Noto, sans-serif;
