--- a/src/html/index.html.template
+++ b/src/html/index.html.template
@@ -15,7 +15,7 @@
       crossorigin
     />
     <%= renderTemplate('_header') %>
-    <title>Home Assistant</title>
+    <title>Asystent domowy</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
