--- a/src/html/onboarding.html.template
+++ b/src/html/onboarding.html.template
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Assistant</title>
+    <title>Asystent domowy</title>
     <link rel="preload" href="<%= latestPageJS %>" as="script" crossorigin="use-credentials" />
     <link
       rel="preload"
