--- a/demo/public/manifest.json
+++ b/demo/public/manifest.json
@@ -33,5 +33,5 @@
   "name": "Home Assistant Demo",
   "short_name": "Demo",
   "start_url": "/?homescreen=1",
-  "theme_color": "#03A9F4"
+  "theme_color": "#ff9800"
 }
